新增移动端vant和优化部分组件（axios、分页、pageIndex、tyAlert、api/common）

--- a/package.json
+++ b/package.json
@@ -3,6 +3,6 @@
 	"version": "0.0.1",
 	"description": "ty-school-template preset for vue-cli",
 	"main": "index.js",
-	"author": "PengQi",
+	"author": "pq771271668",
 	"license": "MIT"
 }
