根据项目环境和setting.baseURL值区分baseURL

--- a/template/public/config.json
+++ b/template/public/config.json
@@ -1,7 +1,7 @@
 [
     {
         "code": "420100",
-         "url": "http://zhxy-gateway-7.d.huijiaoyun.com"
+        "url": "http://zhxy-gateway-7.huijiaoyun.com"
     },
     {
         "code": "371500",
