1、新增platformcode:999999 2、新增goBackApp:H5返回app 3、优化document.title 4、优化drawer.scss:drawer-body 5、优化upload-index:新增max-size和类型判断 6、setting.hasApp:导致操作手册消失问题和菜单收缩问题

--- a/template/public/config.json
+++ b/template/public/config.json
@@ -23,6 +23,10 @@
         "code": "370100",
         "url": "https://zhxy-gateway-7.jndjg.cn"
     },
+	{
+	    "code": "999999",
+	    "url": "https://zhxy-gateway-7.huijiaoyun.com"
+	},
     {
         "code": "",
         "url": "https://zhxy-app-factoryrecord.huijiaoyun.com"
